# MathPF

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
mathpf/: __init__.py
src/mathpf/: __init__.py  avg_funcs.pxd  avg_funcs.pyx
