[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "Cython>=3.0", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[project]
name = "mathpf"
dynamic = ["version"]
description = "Numerically stable math utility functions for quantitative finance"
requires-python = ">=3.10"
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/PyFENG/MathPF"

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip  = "*-musllinux*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["native"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
